--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
+APP_NAME="Extranet Curmasa"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:NCjAXeRJL1UIou9wxhpVKdvhDxxQAksLPuJAZd7lFbk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://extranet.curmasa.info
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db5000482751.hosting-data.io
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=dbs462587
+DB_USERNAME=dbu458551
+DB_PASSWORD=Curmasa2020#
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
